parser/src/snapshots/rustpython_parser__string__tests__fstring_escaped_newline.snap
---
source: parser/src/string.rs
expression: parse_ast
---
[
    Attributed {
        range: 0..8,
        custom: (),
        node: Expr(
            StmtExpr {
                value: Attributed {
                    range: 0..8,
                    custom: (),
                    node: JoinedStr(
                        ExprJoinedStr {
                            values: [
                                Attributed {
                                    range: 0..8,
                                    custom: (),
                                    node: Constant(
                                        ExprConstant {
                                            value: Str(
                                                "\n",
                                            ),
                                            kind: None,
                                        },
                                    ),
                                },
                                Attributed {
                                    range: 0..8,
                                    custom: (),
                                    node: FormattedValue(
                                        ExprFormattedValue {
                                            value: Attributed {
                                                range: 5..6,
                                                custom: (),
                                                node: Name(
                                                    ExprName {
                                                        id: "x",
                                                        ctx: Load,
                                                    },
                                                ),
                                            },
                                            conversion: 0,
                                            format_spec: None,
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                },
            },
        ),
    },
]
