parser/src/snapshots/rustpython_parser__string__tests__fstring_line_continuation.snap
---
source: parser/src/string.rs
expression: parse_ast
---
[
    Attributed {
        range: 0..9,
        custom: (),
        node: Expr(
            StmtExpr {
                value: Attributed {
                    range: 0..9,
                    custom: (),
                    node: JoinedStr(
                        ExprJoinedStr {
                            values: [
                                Attributed {
                                    range: 0..9,
                                    custom: (),
                                    node: Constant(
                                        ExprConstant {
                                            value: Str(
                                                "\\\n",
                                            ),
                                            kind: None,
                                        },
                                    ),
                                },
                                Attributed {
                                    range: 0..9,
                                    custom: (),
                                    node: FormattedValue(
                                        ExprFormattedValue {
                                            value: Attributed {
                                                range: 6..7,
                                                custom: (),
                                                node: Name(
                                                    ExprName {
                                                        id: Identifier(
                                                            "x",
                                                        ),
                                                        ctx: Load,
                                                    },
                                                ),
                                            },
                                            conversion: Int(
                                                0,
                                            ),
                                            format_spec: None,
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                },
            },
        ),
    },
]
