parser/src/snapshots/rustpython_parser__string__tests__fstring_parse_self_documenting_base.snap
---
source: parser/src/string.rs
expression: parse_ast
---
[
    Attributed {
        range: 0..10,
        custom: (),
        node: Constant(
            ExprConstant {
                value: Str(
                    "user=",
                ),
                kind: None,
            },
        ),
    },
    Attributed {
        range: 0..10,
        custom: (),
        node: Constant(
            ExprConstant {
                value: Str(
                    "",
                ),
                kind: None,
            },
        ),
    },
    Attributed {
        range: 0..10,
        custom: (),
        node: FormattedValue(
            ExprFormattedValue {
                value: Attributed {
                    range: 3..7,
                    custom: (),
                    node: Name(
                        ExprName {
                            id: "user",
                            ctx: Load,
                        },
                    ),
                },
                conversion: 114,
                format_spec: None,
            },
        ),
    },
]
