parser/src/snapshots/rustpython_parser__string__tests__fstring_parse_self_documenting_base_more.snap
---
source: parser/src/string.rs
expression: parse_ast
---
[
    Located {
        range: 0..38,
        custom: (),
        node: Constant(
            ExprConstant {
                value: Str(
                    "mix ",
                ),
                kind: None,
            },
        ),
    },
    Located {
        range: 0..38,
        custom: (),
        node: Constant(
            ExprConstant {
                value: Str(
                    "user=",
                ),
                kind: None,
            },
        ),
    },
    Located {
        range: 0..38,
        custom: (),
        node: Constant(
            ExprConstant {
                value: Str(
                    "",
                ),
                kind: None,
            },
        ),
    },
    Located {
        range: 0..38,
        custom: (),
        node: FormattedValue(
            ExprFormattedValue {
                value: Located {
                    range: 7..11,
                    custom: (),
                    node: Name(
                        ExprName {
                            id: "user",
                            ctx: Load,
                        },
                    ),
                },
                conversion: 114,
                format_spec: None,
            },
        ),
    },
    Located {
        range: 0..38,
        custom: (),
        node: Constant(
            ExprConstant {
                value: Str(
                    " with text and ",
                ),
                kind: None,
            },
        ),
    },
    Located {
        range: 0..38,
        custom: (),
        node: Constant(
            ExprConstant {
                value: Str(
                    "second=",
                ),
                kind: None,
            },
        ),
    },
    Located {
        range: 0..38,
        custom: (),
        node: Constant(
            ExprConstant {
                value: Str(
                    "",
                ),
                kind: None,
            },
        ),
    },
    Located {
        range: 0..38,
        custom: (),
        node: FormattedValue(
            ExprFormattedValue {
                value: Located {
                    range: 29..35,
                    custom: (),
                    node: Name(
                        ExprName {
                            id: "second",
                            ctx: Load,
                        },
                    ),
                },
                conversion: 114,
                format_spec: None,
            },
        ),
    },
]
