parser/src/snapshots/rustpython_parser__string__tests__fstring_parse_self_documenting_format.snap
---
source: parser/src/string.rs
expression: parse_ast
---
[
    Attributed {
        range: 0..14,
        custom: (),
        node: Constant(
            ExprConstant {
                value: Str(
                    "user=",
                ),
                kind: None,
            },
        ),
    },
    Attributed {
        range: 0..14,
        custom: (),
        node: Constant(
            ExprConstant {
                value: Str(
                    "",
                ),
                kind: None,
            },
        ),
    },
    Attributed {
        range: 0..14,
        custom: (),
        node: FormattedValue(
            ExprFormattedValue {
                value: Attributed {
                    range: 3..7,
                    custom: (),
                    node: Name(
                        ExprName {
                            id: Identifier(
                                "user",
                            ),
                            ctx: Load,
                        },
                    ),
                },
                conversion: Int(
                    0,
                ),
                format_spec: Some(
                    Attributed {
                        range: 0..14,
                        custom: (),
                        node: JoinedStr(
                            ExprJoinedStr {
                                values: [
                                    Attributed {
                                        range: 0..14,
                                        custom: (),
                                        node: Constant(
                                            ExprConstant {
                                                value: Str(
                                                    ">10",
                                                ),
                                                kind: None,
                                            },
                                        ),
                                    },
                                ],
                            },
                        ),
                    },
                ),
            },
        ),
    },
]
