parser/src/snapshots/rustpython_parser__string__tests__fstring_parse_selfdocumenting_format.snap
---
source: compiler/parser/src/string.rs
assertion_line: 714
expression: parse_ast
---
[
    Located {
        location: Location {
            row: 1,
            column: 0,
        },
        end_location: Some(
            Location {
                row: 1,
                column: 14,
            },
        ),
        custom: (),
        node: Constant {
            value: Str(
                "user=",
            ),
            kind: None,
        },
    },
    Located {
        location: Location {
            row: 1,
            column: 0,
        },
        end_location: Some(
            Location {
                row: 1,
                column: 14,
            },
        ),
        custom: (),
        node: Constant {
            value: Str(
                "",
            ),
            kind: None,
        },
    },
    Located {
        location: Location {
            row: 1,
            column: 0,
        },
        end_location: Some(
            Location {
                row: 1,
                column: 14,
            },
        ),
        custom: (),
        node: FormattedValue {
            value: Located {
                location: Location {
                    row: 1,
                    column: 3,
                },
                end_location: Some(
                    Location {
                        row: 1,
                        column: 7,
                    },
                ),
                custom: (),
                node: Name {
                    id: "user",
                    ctx: Load,
                },
            },
            conversion: 0,
            format_spec: Some(
                Located {
                    location: Location {
                        row: 1,
                        column: 0,
                    },
                    end_location: Some(
                        Location {
                            row: 1,
                            column: 14,
                        },
                    ),
                    custom: (),
                    node: JoinedStr {
                        values: [
                            Located {
                                location: Location {
                                    row: 1,
                                    column: 0,
                                },
                                end_location: Some(
                                    Location {
                                        row: 1,
                                        column: 14,
                                    },
                                ),
                                custom: (),
                                node: Constant {
                                    value: Str(
                                        ">10",
                                    ),
                                    kind: None,
                                },
                            },
                        ],
                    },
                },
            ),
        },
    },
]
