parser/src/snapshots/rustpython_parser__string__tests__fstring_unescaped_newline.snap
---
source: parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..11,
            value: JoinedStr(
                ExprJoinedStr {
                    range: 0..11,
                    values: [
                        Constant(
                            ExprConstant {
                                range: 0..11,
                                value: Str(
                                    "\n",
                                ),
                                kind: None,
                            },
                        ),
                        FormattedValue(
                            ExprFormattedValue {
                                range: 0..11,
                                value: Name(
                                    ExprName {
                                        range: 6..7,
                                        id: Identifier(
                                            "x",
                                        ),
                                        ctx: Load,
                                    },
                                ),
                                conversion: Int(
                                    0,
                                ),
                                format_spec: None,
                            },
                        ),
                    ],
                },
            ),
        },
    ),
]
