parser/src/snapshots/rustpython_parser__string__tests__hts_alias.snap
---
source: parser/src/string.rs
expression: parse_ast
---
[
    Attributed {
        range: 0..9,
        custom: (),
        node: Expr(
            StmtExpr {
                value: Attributed {
                    range: 0..9,
                    custom: (),
                    node: Constant(
                        ExprConstant {
                            value: Str(
                                "\u{88}",
                            ),
                            kind: None,
                        },
                    ),
                },
            },
        ),
    },
]
