parser/src/snapshots/rustpython_parser__string__tests__parse_empty_fstring.snap
---
source: compiler/parser/src/string.rs
assertion_line: 690
expression: "parse_fstring(\"\").unwrap()"
---
[]
